--- a/DojaRevistas.HTML
+++ b/DojaRevistas.HTML
@@ -15,7 +15,7 @@
           <ul id="menuList" class="menu inactive">
             <li class="item"><a href="DojaRevistas.HTML"><i class="fa-light fa-ticket"></i>Inicio</a></li>
             <li class="item"><a href="index.html"><i class="fa-light fa-ferry"></i>Categorias</a></li>
-            <li class="item"><a href="login.html"><i class="fa-light fa-ferry"></i>Iniciar sesión</a></li>
+            <li class="item"><a href="loginv2.html"><i class="fa-light fa-ferry"></i>Iniciar sesión</a></li>
           </ul>
         </nav>
     </head>
