--- a/loginv2.html
+++ b/loginv2.html
@@ -15,46 +15,49 @@
   <div class="card-wrap">
     <div class="card border-0 shadow card--welcome is-show" id="welcome">
       <div class="card-body">
-        <h2 class="card-title">WELCOME</h2>
-        <p>Welcome to the login page</p>
-        <div class="btn-wrap"><a class="btn btn-lg btn-register js-btn" data-target="register">REGISTER</a><a class="btn btn-lg btn-login js-btn" data-target="login">LOGIN</a></div>
+        <h2 class="card-title">BIENVENIDO</h2>
+        <p>Bienvenido a la página de inicio de sesión</p>
+        <div class="btn-wrap"><a class="btn btn-lg btn-register js-btn" data-target="register">REGISTRAR</a><a class="btn btn-lg btn-login js-btn" data-target="login">LOGIN</a></div>
       </div>
     </div>
     <div class="card border-0 shadow card--register" id="register">
       <div class="card-body">
-        <h2 class="card-title">Create Account</h2>
-        <p class="card-text">Enter your personal details<br/>and start journey with us</p>
-        <p class="badge-wrap"><a class="badge"><i class="fab fa-facebook-f"></i></a><a class="badge"><i class="fab fa-google"></i></a><a class="badge"><i class="fab fa-twitter"></i></a><a class="badge"><i class="fab fa-github"></i></a></p>
-        <p>or use your email for registration</p>
-        <form>
+        <h2 class="card-title">Crear una Cuenta</h2>
+        <p class="card-text">Ingresa tu información personal<br/>y comienza una aventura con nosotros</p>
           <div class="form-group">
-            <input class="form-control" type="text" placeholder="Name" required="required"/>
+            <input class="form-control" type="text" name="nombre" placeholder="Nombre" required="required"/>
           </div>
           <div class="form-group">
-            <input class="form-control" type="email" placeholder="Email" required="required"/>
+            <input class="form-control" type="email" name="correo_electronico" placeholder="Email" required="required"/>
           </div>
           <div class="form-group">
-            <input class="form-control" type="password" placeholder="Password" required="required"/>
+            <input class="form-control" type="password" name="password" placeholder="Contraseña" required="required"/>
           </div>
-          <button class="btn btn-lg">REGISTER</button>
+          <div class="form-group">
+            <input class="form-control" type="tel" name="telefono" placeholder="Teléfono" required="required"/>
+          </div>
+          <div class="form-group">
+            <input class="form-control" type="text" name="rfc" placeholder="RFC (Opcional)" />
+          </div>
+
+          <button class="btn btn-lg">REGISTRAR</button>
         </form>
       </div>
       <button class="btn btn-back js-btn" data-target="welcome"><i class="fas fa-angle-left"></i></button>
     </div>
     <div class="card border-0 shadow card--login" id="login">
       <div class="card-body">
-        <h2 class="card-title">Welcome Back!</h2>
-        <p>To keep connected with us<br/>please login with your personal info</p>
-        <p class="badge-wrap"><a class="badge"><i class="fab fa-facebook-f"></i></a><a class="badge"><i class="fab fa-google"></i></a><a class="badge"><i class="fab fa-twitter"></i></a><a class="badge"><i class="fab fa-github"></i></a></p>
-        <p>or use your account</p>
+        <h2 class="card-title">Bienvenido de Vuelta!</h2>
+        <p>Para mantenerte conectado<br/>Inicia sesión con tus datos de usuario</p>
+        
         <form>
           <div class="form-group">
             <input class="form-control" type="email" placeholder="Email" required="required"/>
           </div>
           <div class="form-group">
-            <input class="form-control" type="password" placeholder="Password" required="required"/>
+            <input class="form-control" type="password" placeholder="Contraseña" required="required"/>
           </div>
-          <p><a>Forgot your password?</a></p>
+          <!-- <p><a>Olvidaste tu contraseña?</a></p>-->
           <button class="btn btn-lg">LOGIN</button>
         </form>
       </div>
