--- a/loginv2.html
+++ b/loginv2.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" >
 <head>
@@ -50,7 +51,7 @@
         <h2 class="card-title">Bienvenido de Vuelta!</h2>
         <p>Para mantenerte conectado<br/>Inicia sesión con tus datos de usuario</p>
         
-        <form>
+        <form action="" method="Post">
           <div class="form-group">
             <input class="form-control" type="email" placeholder="Email" required="required"/>
           </div>
@@ -58,7 +59,7 @@
             <input class="form-control" type="password" placeholder="Contraseña" required="required"/>
           </div>
           <!-- <p><a>Olvidaste tu contraseña?</a></p>-->
-          <button class="btn btn-lg">LOGIN</button>
+          <button class="btn btn-lg" type="submit">LOGIN</button>
         </form>
       </div>
       <button class="btn btn-back js-btn" data-target="welcome"><i class="fas fa-angle-left"></i></button>
