--- a/perfil.html
+++ b/perfil.html
@@ -37,7 +37,10 @@
                                     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Sobre tu Cuenta</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Direcciones</a>
+                                    <a class="nav-link" id="direc-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="direc" aria-selected="false">Direcciones</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" id="orden-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="orden" aria-selected="false">Ordenes</a>
                                 </li>
                             </ul>
                         </div>
@@ -52,7 +55,7 @@
                         </div>
                     </div>
                     <div class="col-md-8">
-                        <div class="tab-content profile-tab" id="myTabContent">
+                        <div class="tab-content home-tab" id="myTabContent">
                             <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                                         
                                         <div class="row">
@@ -88,7 +91,7 @@
                                             </div>
                                         </div>
                             </div>
-                            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                            <div class="tab-pane fade" id="direc" role="tabpanel" aria-labelledby="direc-tab">
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <label>Experience</label>
@@ -136,6 +139,54 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="tab-pane fade" id="orden" role="tabpanel" aria-labelledby="orden-tab">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <label>Experience</label>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <p>Expert</p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <label>Hourly Rate</label>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <p>10$/hr</p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <label>Total Projects</label>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <p>230</p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <label>English Level</label>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <p>Expert</p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <label>Availability</label>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <p>6 months</p>
+                                    </div>
+                                </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <label>Your Bio</label><br/>
+                                <p>Your detail description</p>
+                            </div>
+                        </div>
+                    </div>
                         </div>
                     </div>
                 </div>
