--- a/DojaRevistasLOG.HTML
+++ b/DojaRevistasLOG.HTML
@@ -28,12 +28,11 @@
 <div class="full-page-green"></div>
 <div class="ham-menu">
   <ul class="centre-text bold-text">
-    <li><a href="Shipping.html">Home</a></li>
-    <li>Categories</li>
-    <li>Services</li>
-    <li>Shop</li>
-    <li>Support</li>
-    <li>Contact us</li>
+    <li><a href="DojaRevistasLOG.HTML">Inicio</a></li>
+    <li><a href="index.html">Categorias</a></li>
+    <li><a href="Login.php">Mi Cuenta</a></li>
+    <li>Soporte</li>
+    <li>Contactanos</li>
 
   </ul>
 </div>
