--- a/index.html
+++ b/index.html
@@ -24,40 +24,25 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Menu Bar</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
-                </li>
-                      <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
-                </li>
-                      <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </nav>
+        <div class="header">
+        <div class="logo">
+          Company Title
+        </div>
+        <div class="menu">
+          <a href="#" class="link">
+            <div class="title">About</div>
+            <div class="bar"></div>
+          </a>
+          <a href="#" class="link">
+            <div class="title">Work</div>
+            <div class="bar"></div>
+          </a>
+          <a href="#" class="link">
+            <div class="title">Contact</div>
+            <div class="bar"></div>
+          </a>
+        </div>
+      </div>
         
         <header id="header" class="header">
             <div class="container">
