--- a/perfil.html
+++ b/perfil.html
@@ -7,10 +7,28 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
+    <link rel="stylesheet" href="navbar.css">
 </head>
+
 <body>
-    <section>  
+    <div class="header">
+    <div class="menu">
+      <a href="DojaRevistas.HTML" class="link">
+        <div class="title">Inicio</div>
+        <div class="bar"></div>
+      </a>
+      <a href="index.html" class="link">
+        <div class="title">Categorias</div>
+        <div class="bar"></div>
+      </a>
+      <a href="perfil.html" class="link">
+        <div class="title">Mi Cuenta</div>
+        <div class="bar"></div>
+      </a>
+    </div>
+  </div>
+    
+    <section>
 <div class="container emp-profile">
             <form method="post">
                 <div class="row">
