--- a/index.html
+++ b/index.html
@@ -25,33 +25,20 @@
 
     <body>
         <div class="header">
-        <div class="logo">
-          Company Title
-        </div>
         <div class="menu">
-          <a href="#" class="link">
-            <div class="title">About</div>
+          <a href="DojaRevistas.HTML" class="link">
+            <div class="title">Inicio</div>
             <div class="bar"></div>
           </a>
-          <a href="#" class="link">
-            <div class="title">Work</div>
+          <a href="index.html" class="link">
+            <div class="title">Categorias</div>
             <div class="bar"></div>
           </a>
-          <a href="#" class="link">
-            <div class="title">Contact</div>
+          <a href="perfil.html" class="link">
+            <div class="title">Mi Cuenta</div>
             <div class="bar"></div>
           </a>
         </div>
-      </div>
-        
-        <header id="header" class="header">
-            <div class="container">
-                <div class="row">
-                    <div class="four columns">
-                        <img src="logo1.png" alt="logo" border="0" id="logo">
-                    </div>
-                    <div class="two columns u-pull-right">
-                        <ul>
                             <li class="submenu">
                                 <img src="https://i.ibb.co/QM3Nqk4/cart.png" alt="cart" border="0" id="img-carrito">
                                 <div id="carrito">
@@ -92,7 +79,7 @@
                 <div class="row">
                     <div class="six columns">
                         <div class="contenido-hero">
-                            <h2>La revista que quieras la encuentras aquí</h2>
+                            <h1>La revista que quieras la encuentras aquí</h1>
                             <form action="#" id="busqueda" method="post" class="formulario">
                                 <input type="submit" id="submit-buscador" class="submit-buscador">
                             </form>
