--- a/DojaRevistas.HTML
+++ b/DojaRevistas.HTML
@@ -29,7 +29,7 @@
               <ul class="centre-text bold-text">
                 <li><a href="DojaRevistas.HTML">Inicio</a></li>
                 <li><a href="index.html">Categorias</a></li>
-                <li><a href="Login.php">Mi Cuenta</a></li>
+                <li><a href="loginv2.html">Mi Cuenta</a></li>
                 <li>Soporte</li>
                 <li>Contactanos</li>
             
