--- a/perfil.html
+++ b/perfil.html
@@ -71,20 +71,20 @@
                             <p><a href="">CERRAR SESIÓN</a></p>
                         </div>
                     </div>
-                    <div class="col-md-8">
-                        <div class="tab-content home-tab" id="myTabContent">
-                            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                    <div class="col-md-8" >
+                        <div class="tab-content home-tab" id="myTabContent" >
+                            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab" align="center">
                                         
                                         <div class="row">
-                                            <div class="col-md-6">
+                                            <div class="col-md-2">
                                                 <label>Nombre</label>
                                             </div>
-                                            <div class="col-md-6">
+                                            <div class="col-md-2">
                                                 <p>nombre</p>
                                             </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-6">
+                                            <div class="col-md-2">
                                                 <label>Email</label>
                                             </div>
                                             <div class="col-md-6">
