--- a/Catalogo.html
+++ b/Catalogo.html
@@ -31,7 +31,7 @@
             <div class="ham-menu">
               <ul class="centre-text bold-text">
                 <li><a href="DojaRevistasLOG.HTML">Inicio</a></li>
-                <li><a href="index.html">Categorias</a></li>
+                <li><a href="categorias.php">Categorias</a></li>
                 <li><a href="Login.php">Mi Cuenta</a></li>
                 <li>Soporte</li>
                 <li>Contactanos</li>
