--- a/dropdown.html
+++ b/dropdown.html
@@ -21,7 +21,7 @@
     <ul class="menu">
       <li><a href="#"><ion-icon name="person-outline"></ion-icon>Mi Cuenta</a></li>
       <li><a href="#"><ion-icon name="notifications-outline"></ion-icon>Notificaciones</a></li>
-      <li><a href="Shipping.html"><ion-icon name="cog-outline"></ion-icon></ion-icon>Direcciones</a></li>
+      <li><a href="Shipping.php"><ion-icon name="cog-outline"></ion-icon></ion-icon>Direcciones</a></li>
   <li><a href="#"><ion-icon name="log-out-outline"></ion-icon>Cerrar Sesión</a></li>
   </ul>
 </div>
