--- a/Shipping.html
+++ b/Shipping.html
@@ -25,46 +25,46 @@
         </div>
 <!-- partial:index.partial.html -->
 <div class="container">
-  <h1>Direcciones</h1>
-  <p>Porfavor ingresa tus datos de entrega.</p>
+  <h1 align="left">Direcciones</h1>
+  <p align="left">Porfavor ingresa tus datos de entrega.</p>
   <hr />
   <div class="form">
   <div class="fields fields--2">
-    <label class="field">
+    <label class="field" align="left">
       <span class="field__label" for="calle">Calle</span>
       <input class="field__input" type="text" name="calle" id="calle"  />
     </label>
-    <label class="field">
+    <label class="field" align="left">
       <span class="field__label" for="numero_ext">Número Exterior</span>
       <input class="field__input" type="int" name="numero_ext" id="numero_ext" />
     </label>
   </div>
-  <label class="field">
+  <label class="field" align="left">
     <span class="field__label" for="colonia">Colonia</span>
     <input class="field__input" type="text" id="colonia" name="colonia" />
   </label>
   
-  <label class="field">
+  <label class="field" align="left">
     <span class="field__label" for="detalles">Detalles</span>
     <input class="field__input" type="text" id="detalles" name="detalles" />
   </label>
   
-  <label class="field">
+  <label class="field" align="left">
     <span class="field__label" for="country">País</span>
     <select class="field__input" id="country">
       <option value="mexico">México</option>
     </select>
   </label>
   <div class="fields fields--3">
-    <label class="field">
+    <label class="field" align="left">
       <span class="field__label" for="zip">Código Postal</span>
       <input class="field__input" type="int" id="zip" name="zip"/>
     </label>
-    <label class="field">
+    <label class="field" align="left">
       <span class="field__label" for="ciudad">Ciudad</span>
       <input class="field__input" type="text" id="ciudad" name="ciudad"/>
     </label>
-    <label class="field">
+    <label class="field" align="left">
       <span class="field__label" for="estado">Estado</span>
       <select class="field__input" name="estado" id="estado">
           <option value="DIF">Distrito Federal</option>
@@ -108,6 +108,8 @@
   </div>
   <hr>
   <button class="button">Continuar</button>
+  <br>
+  <button class="button">Cancelar</button>
 </div>
 <!-- partial -->
   
